refactor(basic-3.1-3.2, extended-2.1): update project with single style for selectors naming and meaningful naming of ids and classes, update project according to BEM

--- a/style.css
+++ b/style.css
@@ -4,35 +4,36 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.summary {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.summary img {
   width: 100%;
 }
-.aaa .more_inf {
+.summary .summary__info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa {
+  .summary {
     text-align: center;
   }
 }
-.centered-main-page-element {
+.content {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task__input,
+.task__label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.new-task-wrapper {
   display: flex;
 }
 ul {
@@ -121,12 +122,12 @@ li > label {
 li > input[type="text"] {
   width: 226px;
 }
-button.delete img {
+button.task__button-delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.task__button-delete img:hover {
   transform: rotateZ(0);
 }
 
@@ -141,11 +142,11 @@ ul li input[type="text"] {
   display: none;
 }
 
-ul li.editMode input[type="text"] {
+ul li.edit-task input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul li.edit-task label {
   display: none;
 }
