refactor(basic-3.4): change tag selectors to classes and ids

--- a/style.css
+++ b/style.css
@@ -4,16 +4,19 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+p {
+  margin: 0;
+}
 .summary {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.summary img {
+.summary__img {
   width: 100%;
 }
-.summary .summary__info {
+.summary__info {
   font-family: fantasy, cursive;
 }
 
@@ -33,7 +36,7 @@ body {
   display: inline-block;
   flex-grow: 1;
 }
-.new-task-wrapper {
+.new-task__wrapper {
   display: flex;
 }
 ul {
@@ -48,7 +51,7 @@ input,
 button {
   outline: none;
 }
-button {
+.task__btn {
   background: none;
   border: 0px;
   color: #888;
@@ -57,12 +60,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.task__btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.header-3,
+.new-task__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -71,7 +74,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.task__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -83,21 +86,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.task__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task__label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.task__input#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -106,47 +109,48 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task__checkbox {
   margin: 0 10px;
 }
-li > label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.task > .task__input {
   width: 226px;
 }
-button.task__btn-delete img {
+.task__btn-delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.task__btn-delete img:hover {
+.task__btn-delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.task__label_crossed-out {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.task .task__input {
   display: none;
 }
 
-ul li.edit-task input[type="text"] {
+.edit-task .task__input,
+.new-task__wrapper .task__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-task label {
+.edit-task .task__label {
   display: none;
 }
